# shv_video_manager_service

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/: svh_video.dbm
postgresql/schemas/: svh_video_service_db.sql
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp
src/components/convert/: DashConvertComponent.cpp  DashConvertComponent.hpp  fwd.hpp
src/components/dash_converter/: DashConverter.cpp  DashConverter.hpp  fwd.hpp
src/components/http/get/stream/: StreamHandler.cpp  StreamHandler.hpp  fwd.hpp
src/components/http/get/upload/: UploadAccessor.cpp  UploadAccessor.hpp  fwd.hpp
src/components/http/get/videos/: VideosTakeHandler.cpp  VideosTakeHandler.hpp  fwd.hpp
src/components/http/options/: OptionsHandler.cpp  OptionsHandler.hpp  fwd.hpp
src/components/http/post/access/: UploadAccessor.cpp  UploadAccessor.hpp  fwd.hpp
src/components/http/post/upload/: UploadHandler.cpp  UploadHandler.hpp  fwd.hpp
src/components/http/post/uploader/: VideoUploader.cpp  VideoUploader.hpp  fwd.hpp
src/components/upload/: UploadComponent.cpp  UploadComponent.hpp  Uploader.cpp  Uploader.hpp  fwd.hpp
src/logic/convert/controller/: ConvertController.cpp  ConvertController.hpp
src/logic/convert/controller/impl/: ConvertConfig.cpp  ConvertConfig.hpp  ConvertControllerImpl.cpp  ConvertControllerImpl.hpp
src/logic/upload/controller/: ExpirationFileBuilder.cpp  ExpirationFileBuilder.hpp  UploadController.cpp  UploadController.hpp
src/logic/upload/controller/builder/: FileBuilder.cpp  FileBuilder.hpp
src/logic/upload/controller/expiration/: ExpirationController.cpp  ExpirationController.hpp
src/logic/upload/controller/impl/: ExpirationFileBuilder.cpp  ExpirationFileBuilder.hpp  UploadControllerImpl.cpp  UploadControllerImpl.hpp  UploadControllerImplBase.hpp
src/logic/upload/controller/impl/builder/: FileBuilder.cpp  FileBuilder.hpp
src/logic/upload/controller/impl/expiration/: ExpirationController.cpp  ExpirationController.hpp
src/logic/uploader/controller/: ExpirationFileBuilder.cpp  ExpirationFileBuilder.hpp  UploadController.cpp  UploadController.hpp
src/logic/uploader/controller/builder/: FileBuilder.cpp  FileBuilder.hpp
src/logic/uploader/controller/expiration/: ExpirationController.cpp  ExpirationController.hpp
tests/: conftest.py
